# glue-lib-mod-template

./: README.md  aaa.py  pyproject.toml
glue_lib_mod_template/mymodule/: myclasses.py  myfunctions.py
